| Bug #19006 | 4.0 valgrind problems | ||
|---|---|---|---|
| Submitted: | 11 Apr 2006 13:16 | Modified: | 13 Jul 2006 3:45 |
| Reporter: | Oleksandr Byelkin | Email Updates: | |
| Status: | Closed | Impact on me: | |
| Category: | MySQL Server | Severity: | S3 (Non-critical) |
| Version: | 4.0 | OS: | |
| Assigned to: | Chad MILLER | CPU Architecture: | Any |
[11 Apr 2006 13:16]
Oleksandr Byelkin
[11 Apr 2006 13:22]
Oleksandr Byelkin
compressed master.err
Attachment: master.err.gz (application/x-gzip, text), 1.49 KiB.
[1 Jul 2006 18:32]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/8596
[12 Jul 2006 12:33]
Chad MILLER
Patch applied to 4.0.28, and 4.1.21. It should be null-merged to 5.0 and higher. Nothing to document.
[13 Jul 2006 3:43]
Paul DuBois
No changelog entry needed.
