sql/item_func.h
@@ -120,7 +120,10 @@ public:
   {
     return (null_value=args[0]->get_time(ltime));
   }
-  bool is_null() { (void) val_int(); return null_value; }
+  bool is_null() { 
+    (void) val_int();  /* Discard result. It sets null_value as side-effect. */ 
+    return null_value; 
+  }
   friend class udf_handler;
   unsigned int size_of() { return sizeof(*this);}  
   Field *tmp_table_field(TABLE *t_arg);
